--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -16,33 +16,32 @@
   ],
   "license": "MIT",
   "devDependencies": {
-    "@babel/eslint-parser": "^7.16.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "^7.16.7",
-    "enzyme": "3.10.0",
-    "enzyme-adapter-react-16": "1.15.1",
-    "enzyme-to-json": "^3.4.3",
-    "eslint": "^8.6.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-jest": "^25.3.4",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.6",
+    "enzyme-to-json": "^3.6.2",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.28.0",
-    "jest": "24.9.0",
+    "eslint-plugin-react": "^7.29.2",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1"
   },
   "dependencies": {
-    "@ima/core": "17.12.1",
-    "@ima/react-hooks": "1.1.0",
-    "@ima/server": "17.12.0",
-    "body-parser": "1.19.0",
+    "@ima/core": "^17.12.2",
+    "@ima/react-hooks": "^1.1.1",
+    "@ima/server": "^17.12.2",
+    "body-parser": "^1.19.2",
     "compression": "1.7.4",
-    "cookie-parser": "1.4.4",
-    "express": "4.17.1",
-    "express-http-proxy": "1.6.0",
+    "cookie-parser": "^1.4.6",
+    "express": "^4.17.3",
+    "express-http-proxy": "^1.6.3",
     "helmet": "3.21.2",
-    "less": "^4.1.1",
-    "prop-types": "15.7.2",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "serve-favicon": "2.5.0"
+    "prop-types": "^15.8.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "serve-favicon": "^2.5.0"
   }
 }
