--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ima",
   "description": "IMA.js framework for isomorphic javascript application",
   "devDependencies": {
-    "@babel/eslint-parser": "7.16.5",
+    "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "7.16.7",
     "@commitlint/cli": "8.3.5",
     "@commitlint/config-conventional": "8.3.4",
@@ -10,23 +10,23 @@
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
     "@rollup/plugin-typescript": "^8.3.1",
-    "@types/node": "^17.0.10",
+    "@types/node": "^17.0.21",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.10.0",
-    "@typescript-eslint/parser": "^5.10.0",
+    "@typescript-eslint/eslint-plugin": "^5.13.0",
+    "@typescript-eslint/parser": "^5.13.0",
     "autocannon": "4.6.0",
     "bulma": "0.8.0",
-    "commitizen": "4.0.3",
+    "commitizen": "^4.2.4",
     "del": "5.1.0",
-    "eslint": "8.6.0",
-    "eslint-config-prettier": "8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-jest": "25.3.4",
+    "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "4.0.0",
-    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-react": "^7.29.3",
     "fs-extra": "8.1.0",
-    "git-cz": "4.3.1",
+    "git-cz": "^4.8.0",
     "gulp": "4.0.2",
     "gulp-change": "1.0.2",
     "gulp-rename": "2.0.0",
@@ -36,22 +36,22 @@
     "jsdom": "16.4.0",
     "lerna": "3.20.2",
     "lint-staged": "10.0.8",
-    "lunr": "2.3.8",
+    "lunr": "^2.3.9",
     "map-stream": "0.0.7",
-    "postcss": "8.4.5",
+    "postcss": "^8.4.7",
     "postcss-less": "6.0.0",
     "prettier": "2.5.1",
-    "rollup": "^2.68.0",
-    "stylelint": "14.2.0",
-    "stylelint-config-css-modules": "2.3.0",
-    "stylelint-config-standard": "24.0.0",
+    "rollup": "^2.69.0",
+    "stylelint": "^14.5.3",
+    "stylelint-config-css-modules": "^3.0.0",
+    "stylelint-config-standard": "^25.0.0",
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.5",
+    "ts-loader": "^9.2.7",
+    "typescript": "^4.6.2",
     "verdaccio": "4.5.1",
-    "webpack": "^5.67.0",
+    "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
