--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -38,7 +38,7 @@
     "cookie-parser": "^1.4.6",
     "express": "^4.17.3",
     "express-http-proxy": "^1.6.3",
-    "helmet": "3.21.2",
+    "helmet": "^3.21.2",
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
