--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -27,14 +27,14 @@
   },
   "homepage": "https://github.com/seznam/ima",
   "devDependencies": {
-    "@ima/helpers": "^17.9.0",
-    "express": "^4.17.1"
+    "@ima/helpers": "^17.12.2",
+    "express": "^4.17.3"
   },
   "dependencies": {
     "async-each": "1.0.3",
     "ejs": "^3.1.6",
-    "error-to-json": "1.1.0",
-    "highlight.js": "9.16.2",
+    "error-to-json": "^2.0.0",
+    "highlight.js": "^11.4.0",
     "stack-trace": "0.0.10",
     "winston": "^3.6.0"
   },
