--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "release:graduate": "npm run release -- --conventional-graduate",
     "release:publish": "lerna publish from-git --yes",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
-    "lint:cmd": "eslint -c ./.eslintrc.js --ignore-path ./.eslintignore",
+    "lint:cmd": "eslint -c ./.eslintrc.js",
     "lint": "npm run lint:cmd -- './**/*.{js,jsx,ts,tsx}'",
     "lint:fix": "npm run lint -- --fix",
     "stylelint": "stylelint './**/*.less'",
