--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "typescript": "^4.6.2",
     "verdaccio": "4.5.1",
     "webpack": "^5.69.1",
-    "webpack-cli": "^4.9.2",
-    "webpack-merge": "^5.8.0"
+    "webpack-cli": "^4.9.2"
   },
   "scripts": {
     "postinstall": "npm install --prefix ./packages/devtools && lerna bootstrap",
