style: 💄 Updated package.json meta descriptions

--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -32,7 +32,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/seznam/ima.git"
+    "url": "https://github.com/seznam/ima.git",
+    "directory": "packages/create-ima-app"
   },
   "bugs": {
     "url": "https://github.com/seznam/ima/issues"
