--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -38,7 +38,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/seznam/ima.git"
+    "url": "https://github.com/seznam/ima.git",
+    "directory": "packages/core"
   },
   "bugs": {
     "url": "https://github.com/seznam/ima/issues"
