--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -31,7 +31,8 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/seznam/ima.git"
+    "url": "https://github.com/seznam/ima.git",
+    "directory": "packages/devtools"
   },
   "bugs": {
     "url": "https://github.com/seznam/ima/issues"
