--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@ima/error-overlay",
+  "version": "17.12.0",
   "description": "IMA.js error-overlay used in development mode for error reporting.",
   "keywords": [
     "IMA.js",
@@ -7,13 +8,25 @@
     "error-overlay",
     "stack-trace"
   ],
-  "version": "17.10.0",
   "main": "./dist/overlay.js",
   "scripts": {
     "dev": "NODE_ENV=development ../../node_modules/.bin/webpack --watch",
     "build": "NODE_ENV=production ../../node_modules/.bin/webpack"
   },
-  "author": "Jan Šimeček",
+  "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
+  "contributors": [],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seznam/ima.git",
+    "directory": "packages/error-overlay"
+  },
+  "bugs": {
+    "url": "https://github.com/seznam/ima/issues"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/",
+    "access": "public"
+  },
   "license": "MIT",
   "devDependencies": {
     "@ima/cli": "*",
