--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -9,7 +9,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/seznam/ima.git"
+    "url": "https://github.com/seznam/ima.git",
+    "directory": "packages/server"
   },
   "keywords": [
     "gulp",
