--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -29,7 +29,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@ima/cli": "*",
+    "@ima/dev-utils": "~17.10.0",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.13",
