--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/error-overlay",
-  "version": "17.12.0",
+  "version": "17.10.0",
   "description": "IMA.js error-overlay used in development mode for error reporting.",
   "keywords": [
     "IMA.js",
@@ -29,7 +29,7 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@ima/dev-utils": "~17.10.0",
+    "@ima/dev-utils": "^17.10.0",
     "@types/prismjs": "^1.16.6",
     "@types/react": "^17.0.37",
     "@types/react-dom": "^17.0.13",
