--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -31,8 +31,6 @@
   "devDependencies": {
     "@ima/dev-utils": "^17.10.0",
     "@types/prismjs": "^1.16.6",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.13",
     "clsx": "^1.1.1",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
@@ -41,12 +39,9 @@
     "eslint-plugin-tailwindcss": "^3.5.0",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
+    "preact": "^10.6.6",
     "prismjs": "^1.27.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "scheduler": "^0.20.2",
     "source-map": "^0.7.3",
-    "tailwindcss": "^3.0.23",
-    "use-context-selector": "^1.3.9"
+    "tailwindcss": "^3.0.23"
   }
 }
