--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -34,14 +34,17 @@
     "clsx": "^1.1.1",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.7.0",
     "css-minimizer-webpack-plugin": "^3.3.0",
     "easy-uid": "^2.0.2",
     "eslint-plugin-tailwindcss": "^3.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.7",
     "postcss-loader": "^6.2.1",
     "preact": "^10.6.6",
     "prismjs": "^1.27.0",
     "source-map": "^0.7.3",
+    "stacktrace-parser": "^0.1.10",
     "tailwindcss": "^3.0.23"
   }
 }
