--- a/packages/error-overlay/tsconfig.json
+++ b/packages/error-overlay/tsconfig.json
@@ -1,18 +1,23 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM", "ES2020"],
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact",
+    "lib": [
+      "DOM",
+      "ES2020"
+    ],
     "outDir": "./dist",
     "baseUrl": ".",
     "declaration": false,
     "paths": {
-      "#/*": ["./src/*"]
+      "#/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
     "./typings/**/*",
-    "./src/**/*"
+    "./src/**/*",
+    "index.less",
+    "index.tsx"
   ]
 }
