--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -14,6 +14,9 @@
     "dev": "../../node_modules/.bin/rollup --config --watch",
     "build": "../../node_modules/.bin/rollup --config"
   },
+  "files": [
+    "./dist"
+  ],
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
   "contributors": [],
   "repository": {
@@ -29,6 +32,9 @@
     "access": "public"
   },
   "license": "MIT",
+  "dependencies": {
+    "@ima/dev-utils": "^17.10.0"
+  },
   "devDependencies": {
     "@types/lodash.debounce": "^4.0.6",
     "lodash.debounce": "^4.0.8",
