--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,12 @@
       "typings",
       "node_modules/@types"
     ],
+    "outDir": "dist",
     "declaration": true,
     "noEmitOnError": true,
     "allowJs": true,
     "esModuleInterop": true,
+    "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "noUnusedLocals": false,
