--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -39,17 +39,18 @@
     "@babel/preset-react": "^7.16.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "@swc/core": "^1.2.147",
+    "@swc/core": "^1.2.154",
     "@types/webpack": "^5.28.0",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.2",
-    "bundle-stats-webpack-plugin": "^3.2.5",
+    "bundle-stats-webpack-plugin": "^3.2.9",
     "chalk": "^4.1.2",
     "cli-highlight": "^2.1.11",
     "cli-progress": "^3.10.0",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.4",
     "core-js": "^3.21.1",
+    "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.4.1",
     "express": "^4.17.3",
     "express-static-gzip": "^2.1.5",
@@ -57,10 +58,11 @@
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "messageformat": "^2.3.0",
-    "mini-svg-data-uri": "^1.4.3",
+    "mini-css-extract-plugin": "^2.6.0",
+    "mini-svg-data-uri": "^1.4.4",
     "nodemon": "^2.0.15",
     "open-editor": "^3.0.0",
-    "postcss": "^8.4.6",
+    "postcss": "^8.4.8",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
@@ -80,6 +82,7 @@
     "@ima/server": "^17.12.2",
     "@types/cli-progress": "^3.9.2",
     "@types/express": "^4.17.13",
+    "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/nodemon": "^1.19.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-middleware": "^5.3.0",
