--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@typescript-eslint/parser": "^5.14.0",
     "autocannon": "4.6.0",
     "bulma": "0.8.0",
+    "chalk": "^4.1.2",
+    "chokidar": "^3.5.3",
     "commitizen": "^4.2.4",
     "del": "5.1.0",
     "eslint": "^8.11.0",
