--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -37,11 +37,13 @@
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
+    "@ima/dev-utils": "^17.10.0",
     "@ima/error-overlay": "^17.10.0",
     "@ima/hmr-client": "^17.10.0",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
     "@swc/core": "^1.2.155",
     "@types/webpack": "^5.28.0",
+    "@types/yargs": "^17.0.9",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.2",
     "bundle-stats-webpack-plugin": "^3.2.9",
@@ -86,8 +88,7 @@
     "@types/nodemon": "^1.19.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
     "@types/webpack-dev-middleware": "^5.3.0",
-    "@types/webpack-hot-middleware": "^2.25.6",
-    "@types/yargs": "^17.0.9"
+    "@types/webpack-hot-middleware": "^2.25.6"
   },
   "peerDependencies": {
     "@ima/server": "*"
