--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.3"
   },
   "dependencies": {
+    "@ima/dev-utils": "^17.10.0",
     "ejs": "^3.1.6",
     "error-to-json": "^2.0.0",
     "winston": "^3.6.0"
