--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -15,7 +15,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "../../node_modules/.bin/tsc",
-    "dev": "../../node_modules/.bin/tsc --watch"
+    "dev": "../../node_modules/.bin/tsc --watch",
+    "prepare": "npm run build"
   },
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
   "contributors": [],
