--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -11,7 +11,8 @@
   "main": "./dist/overlay.js",
   "scripts": {
     "dev": "NODE_ENV=development ../../node_modules/.bin/webpack --watch",
-    "build": "NODE_ENV=production ../../node_modules/.bin/webpack"
+    "build": "NODE_ENV=production ../../node_modules/.bin/webpack",
+    "prepare": "npm run build"
   },
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
   "contributors": [],
@@ -36,6 +37,7 @@
     "clsx": "^1.1.1",
     "compression-webpack-plugin": "^9.2.0",
     "copy-webpack-plugin": "^10.2.0",
+    "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^3.3.0",
     "easy-uid": "^2.0.2",
     "less": "^4.1.2",
