--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -12,7 +12,8 @@
   "types": "./dist/types.d.ts",
   "scripts": {
     "dev": "../../node_modules/.bin/rollup --config --watch",
-    "build": "../../node_modules/.bin/rollup --config"
+    "build": "../../node_modules/.bin/rollup --config",
+    "prepare": "npm run build"
   },
   "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
   "contributors": [],
