test: 💍 HttpProxy test fixes

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "gulp-change": "1.0.2",
     "gulp-rename": "2.0.0",
     "husky": "4.2.3",
-    "jest": "25.1.0",
+    "jest": "^26.6.3",
     "jsdoc-to-markdown": "5.0.3",
     "jsdom": "16.4.0",
     "lerna": "3.20.2",
