--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "preversion": "npm test",
-    "test": "../../node_modules/.bin/jest -c jest.conf.js"
+    "test": "../../node_modules/.bin/jest -c jest.config.js"
   },
   "repository": {
     "type": "git",
