--- a/package.json
+++ b/package.json
@@ -1,11 +1,68 @@
 {
   "name": "ima",
-  "description": "IMA.js framework for isomorphic javascript application",
+  "bugs": {
+    "url": "https://github.com/seznam/ima/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/seznam/ima.git"
+  },
+  "license": "MIT",
+  "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
+  "workspaces": [
+    "./packages/cli",
+    "./packages/core",
+    "./packages/create-ima-app",
+    "./packages/dev-utils",
+    "./packages/devtool-scripts",
+    "./packages/error-overlay",
+    "./packages/helpers",
+    "./packages/hmr-client",
+    "./packages/server"
+  ],
+  "scripts": {
+    "postinstall": "npm install --prefix ./packages/devtools && if ! $CI; then lerna run prepare; fi",
+    "benchmark": "utils/benchmark/benchmark.sh",
+    "precommit": "lint-staged",
+    "commit": "git-cz",
+    "doc": "gulp doc",
+    "lint": "npm run lint:cmd -- './**/*.{js,jsx,ts,tsx}'",
+    "lint:cmd": "eslint -c ./.eslintrc.js",
+    "lint:fix": "npm run lint -- --fix",
+    "release": "lerna version --force-publish create-ima-app",
+    "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
+    "release:graduate": "npm run release -- --conventional-graduate",
+    "release:next": "npm run release -- prerelease",
+    "release:next:init": "lerna version premajor --force-publish",
+    "release:publish": "lerna publish from-git --yes",
+    "stylelint": "stylelint './**/*.less'",
+    "stylelint:fix": "npm run stylelint -- --fix",
+    "test": "lerna run test && npm run --prefix ./packages/devtools test",
+    "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "git-cz"
+    }
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
+  },
+  "lint-staged": {
+    "**/*.{js,jsx}": "npm run lint:cmd"
+  },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
     "@babel/preset-react": "7.16.7",
-    "@commitlint/cli": "8.3.5",
-    "@commitlint/config-conventional": "8.3.4",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@fortawesome/fontawesome-free": "5.12.1",
     "@rollup/plugin-commonjs": "^21.0.2",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -13,9 +70,9 @@
     "@types/node": "^17.0.21",
     "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.3",
-    "@typescript-eslint/eslint-plugin": "^5.14.0",
-    "@typescript-eslint/parser": "^5.14.0",
-    "autocannon": "4.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.15.0",
+    "@typescript-eslint/parser": "^5.15.0",
+    "autocannon": "^7.7.1",
     "bulma": "0.8.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
@@ -36,16 +93,16 @@
     "jest": "^26.6.3",
     "jsdoc-to-markdown": "5.0.3",
     "jsdom": "16.4.0",
-    "lerna": "3.20.2",
+    "lerna": "^4.0.0",
     "lint-staged": "10.0.8",
     "lunr": "^2.3.9",
     "map-stream": "0.0.7",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.12",
     "postcss-less": "6.0.0",
-    "prettier": "2.5.1",
+    "prettier": "^2.6.0",
     "rollup": "^2.70.1",
-    "stylelint": "^14.5.3",
-    "stylelint-config-css-modules": "^4.0.1",
+    "stylelint": "^14.6.0",
+    "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-standard": "^25.0.0",
     "stylelint-declaration-block-no-ignored-properties": "2.5.0",
     "stylelint-order": "5.0.0",
@@ -55,47 +112,5 @@
     "verdaccio": "^5.8.0",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
-  },
-  "scripts": {
-    "postinstall": "npm install --prefix ./packages/devtools && lerna bootstrap",
-    "benchmark": "utils/benchmark/benchmark.sh",
-    "doc": "gulp doc",
-    "test": "lerna run test && npm run --prefix ./packages/devtools test",
-    "release": "lerna version --force-publish create-ima-app",
-    "release:next": "npm run release -- prerelease",
-    "release:next:init": "lerna version premajor --force-publish",
-    "release:graduate": "npm run release -- --conventional-graduate",
-    "release:publish": "lerna publish from-git --yes",
-    "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
-    "lint:cmd": "eslint -c ./.eslintrc.js",
-    "lint": "npm run lint:cmd -- './**/*.{js,jsx,ts,tsx}'",
-    "lint:fix": "npm run lint -- --fix",
-    "stylelint": "stylelint './**/*.less'",
-    "stylelint:fix": "npm run stylelint -- --fix",
-    "precommit": "lint-staged",
-    "commit": "git-cz",
-    "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
-  },
-  "author": "Miroslav Jancarik <miroslav.jancarik@firma.seznam.cz>",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/seznam/ima.git"
-  },
-  "bugs": {
-    "url": "https://github.com/seznam/ima/issues"
-  },
-  "lint-staged": {
-    "**/*.{js,jsx}": "npm run lint:cmd"
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
-    ]
-  },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
   }
 }
