--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/cli",
-  "version": "17.10.0",
+  "version": "17.12.3",
   "description": "IMA.js CLI tool to build, develop and work with IMA.js applications.",
   "keywords": [
     "IMA",
@@ -8,46 +8,41 @@
     "Isomorphic",
     "Javascript"
   ],
-  "bin": {
-    "ima": "./dist/bin/ima.js"
+  "bugs": {
+    "url": "https://github.com/seznam/ima/issues"
   },
-  "main": "./dist/index.js",
-  "types": "./dist/index.d.ts",
-  "scripts": {
-    "build": "../../node_modules/.bin/tsc",
-    "dev": "../../node_modules/.bin/tsc --watch",
-    "prepare": "npm run build"
-  },
-  "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
-  "contributors": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/seznam/ima.git",
     "directory": "packages/cli"
   },
-  "bugs": {
-    "url": "https://github.com/seznam/ima/issues"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
   "license": "MIT",
+  "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
+  "main": "./dist/index.js",
+  "types": "./dist/index.d.ts",
+  "bin": {
+    "ima": "./dist/bin/ima.js"
+  },
+  "scripts": {
+    "build": "tsc",
+    "dev": "tsc --watch",
+    "prepare": "npm run build"
+  },
   "dependencies": {
-    "@babel/core": "^7.17.5",
+    "@babel/core": "^7.17.7",
     "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
-    "@ima/dev-utils": "^17.10.0",
-    "@ima/error-overlay": "^17.10.0",
-    "@ima/hmr-client": "^17.10.0",
+    "@ima/dev-utils": "^17.12.3",
+    "@ima/error-overlay": "^17.12.3",
+    "@ima/hmr-client": "^17.12.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "@swc/core": "^1.2.155",
+    "@swc/core": "^1.2.157",
     "@types/webpack": "^5.28.0",
     "@types/yargs": "^17.0.9",
     "babel-loader": "^8.2.3",
     "better-opn": "^3.0.2",
-    "bundle-stats-webpack-plugin": "^3.2.9",
+    "bundle-stats-webpack-plugin": "^3.3.0",
     "chalk": "^4.1.2",
     "cli-progress": "^3.10.0",
     "compression-webpack-plugin": "^9.2.0",
@@ -57,7 +52,7 @@
     "css-minimizer-webpack-plugin": "^3.4.1",
     "express": "^4.17.3",
     "express-static-gzip": "^2.1.5",
-    "globby": "^11.0.4",
+    "globby": "^11.1.0",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "messageformat": "^2.3.0",
@@ -65,7 +60,7 @@
     "mini-svg-data-uri": "^1.4.4",
     "nodemon": "^2.0.15",
     "open-editor": "^3.0.0",
-    "postcss": "^8.4.8",
+    "postcss": "^8.4.12",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
@@ -76,22 +71,23 @@
     "schema-utils": "^4.0.0",
     "svgo-loader": "^3.0.0",
     "swc-loader": "^0.1.15",
-    "webpack": "^5.69.1",
+    "webpack": "^5.70.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-dev-middleware": "^5.3.1",
     "yargs": "^17.3.1"
   },
   "devDependencies": {
-    "@ima/server": "^17.12.2",
     "@types/cli-progress": "^3.9.2",
     "@types/express": "^4.17.13",
-    "@types/mini-css-extract-plugin": "^2.5.1",
     "@types/nodemon": "^1.19.1",
     "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@types/webpack-dev-middleware": "^5.3.0",
     "@types/webpack-hot-middleware": "^2.25.6"
   },
   "peerDependencies": {
-    "@ima/server": "*"
+    "@ima/server": ">=17.0.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
