--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/error-overlay",
-  "version": "17.10.0",
+  "version": "17.12.3",
   "description": "IMA.js error-overlay used in development mode for error reporting.",
   "keywords": [
     "IMA.js",
@@ -8,41 +8,37 @@
     "error-overlay",
     "stack-trace"
   ],
-  "main": "./dist/overlay.js",
-  "scripts": {
-    "dev": "NODE_ENV=development ../../node_modules/.bin/webpack --watch",
-    "build": "NODE_ENV=production ../../node_modules/.bin/webpack",
-    "prepare": "npm run build"
+  "bugs": {
+    "url": "https://github.com/seznam/ima/issues"
   },
-  "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
-  "contributors": [],
   "repository": {
     "type": "git",
     "url": "https://github.com/seznam/ima.git",
     "directory": "packages/error-overlay"
   },
-  "bugs": {
-    "url": "https://github.com/seznam/ima/issues"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
   "license": "MIT",
+  "author": "Jan Šimeček <jan.simecek@firma.seznam.cz>",
+  "main": "./dist/overlay.js",
+  "scripts": {
+    "build": "NODE_ENV=production webpack",
+    "build:ts": "tsc",
+    "dev": "NODE_ENV=development webpack --watch",
+    "prepare": "npm run build"
+  },
   "devDependencies": {
-    "@ima/dev-utils": "^17.10.0",
-    "@types/prismjs": "^1.16.6",
+    "@ima/dev-utils": "^17.12.3",
+    "@types/prismjs": "^1.26.0",
     "@types/react": "^17.0.40",
     "@types/react-dom": "^17.0.13",
     "clsx": "^1.1.1",
     "compression-webpack-plugin": "^9.2.0",
-    "copy-webpack-plugin": "^10.2.0",
+    "copy-webpack-plugin": "^10.2.4",
     "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^3.3.0",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "easy-uid": "^2.0.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
-    "postcss": "^8.4.7",
+    "postcss": "^8.4.12",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.4.2",
     "prismjs": "^1.27.0",
@@ -50,6 +46,14 @@
     "react-dom": "^17.0.2",
     "source-map": "^0.7.3",
     "stacktrace-parser": "^0.1.10",
-    "style-loader": "^3.3.1"
+    "style-loader": "^3.3.1",
+    "ts-loader": "^9.2.8",
+    "tsconfig-paths-webpack-plugin": "^3.5.2",
+    "webpack": "^5.70.0",
+    "webpack-cli": "^4.9.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
