--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,46 +2,40 @@
   "name": "@ima/server",
   "version": "17.12.2",
   "description": "Default dev server for IMA.js applications.",
-  "main": "index.js",
-  "scripts": {
-    "preversion": "npm test",
-    "test": "../../node_modules/.bin/jest -c jest.config.js"
+  "keywords": [
+    "gulp",
+    "IMA.js",
+    "ima"
+  ],
+  "bugs": {
+    "url": "https://github.com/seznam/ima/issues"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/seznam/ima.git",
     "directory": "packages/server"
   },
-  "keywords": [
-    "gulp",
-    "IMA.js",
-    "ima"
-  ],
-  "author": "Seznam.cz, a.s.",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/seznam/ima/issues"
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org/",
-    "access": "public"
-  },
-  "homepage": "https://github.com/seznam/ima",
-  "devDependencies": {
-    "@ima/helpers": "^17.12.2",
-    "express": "^4.17.3"
+  "author": "Seznam.cz, a.s.",
+  "main": "index.js",
+  "scripts": {
+    "test": "jest -c jest.config.js",
+    "preversion": "npm test"
   },
   "dependencies": {
-    "@ima/dev-utils": "^17.10.0",
+    "@ima/dev-utils": "^17.12.3",
     "ejs": "^3.1.6",
     "error-to-json": "^2.0.0",
     "winston": "^3.6.0"
   },
-  "peerDependencies": {
-    "@ima/helpers": "17.x"
+  "devDependencies": {
+    "express": "^4.17.3"
   },
-  "engines": {
-    "node": ">=6",
-    "npm": ">=6"
+  "peerDependencies": {
+    "@ima/helpers": ">= 17.9.0"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
