--- a/package.json
+++ b/package.json
@@ -21,23 +21,20 @@
     "./packages/server"
   ],
   "scripts": {
-    "postinstall": "npm install --prefix ./packages/devtools && if ! $CI; then lerna run prepare; fi",
+    "postinstall": "npm install --prefix ./packages/devtools; turbo run build",
     "benchmark": "utils/benchmark/benchmark.sh",
     "precommit": "lint-staged",
     "commit": "git-cz",
     "doc": "gulp doc",
-    "lint": "npm run lint:cmd -- './**/*.{js,jsx,ts,tsx}'",
-    "lint:cmd": "eslint -c ./.eslintrc.js",
-    "lint:fix": "npm run lint -- --fix",
+    "lint": "turbo run lint",
     "release": "lerna version --force-publish create-ima-app",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
     "release:graduate": "npm run release -- --conventional-graduate",
     "release:next": "npm run release -- prerelease",
     "release:next:init": "lerna version premajor --force-publish",
     "release:publish": "lerna publish from-git --yes",
-    "stylelint": "stylelint './**/*.less'",
-    "stylelint:fix": "npm run stylelint -- --fix",
-    "test": "lerna run test && npm run --prefix ./packages/devtools test",
+    "stylelint": "turbo run stylelint",
+    "test": "turbo run test && npm run --prefix ./packages/devtools test",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
   },
   "husky": {
@@ -108,9 +105,11 @@
     "stylelint-order": "5.0.0",
     "to-mock": "1.6.2",
     "ts-loader": "^9.2.8",
+    "turbo": "^1.1.6",
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
     "webpack": "^5.69.1",
     "webpack-cli": "^4.9.2"
-  }
+  },
+  "packageManager": "npm@8.5.0"
 }
