--- a/packages/create-ima-app/package.json
+++ b/packages/create-ima-app/package.json
@@ -37,6 +37,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 0",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
+    "stylelint": "stylelint './**/*.less'",
     "preversion": "npm test"
   },
   "dependencies": {
