--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "scripts": {
     "test": "jest --config jest.config.json",
-    "lint": "eslint --fix './**/*.{js,jsx}'",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "dev": "ima dev",
     "build": "NODE_ENV=production ima build",
     "start": "NODE_ENV=production node server/server.js"
