--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -21,9 +21,9 @@
   "main": "./dist/overlay.js",
   "scripts": {
     "build": "NODE_ENV=production webpack",
-    "build:ts": "tsc",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "dev": "NODE_ENV=development webpack --watch",
-    "prepare": "npm run build"
+    "stylelint": "stylelint './**/*.less'"
   },
   "devDependencies": {
     "@ima/dev-utils": "^17.12.3",
