--- a/packages/helpers/package.json
+++ b/packages/helpers/package.json
@@ -19,6 +19,7 @@
   "main": "index.js",
   "scripts": {
     "test": "jest -c jest.config.js",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "preversion": "npm test"
   },
   "dependencies": {
