--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -25,8 +25,8 @@
   },
   "scripts": {
     "build": "tsc",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "dev": "tsc --watch"
+    "dev": "tsc --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@babel/core": "^7.17.7",
