--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -32,8 +32,8 @@
   "main": "./dist/fastRefreshClient.cjs",
   "scripts": {
     "build": "rollup --config",
-    "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
-    "dev": "rollup --config --watch"
+    "dev": "rollup --config --watch",
+    "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
     "@ima/dev-utils": "^17.12.3"
