--- a/package.json
+++ b/package.json
@@ -75,14 +75,14 @@
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "commitizen": "^4.2.4",
-    "del": "5.1.0",
+    "del": "^6.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "4.0.0",
     "eslint-plugin-react": "^7.29.4",
-    "fs-extra": "8.1.0",
+    "fs-extra": "^10.0.1",
     "git-cz": "^4.8.0",
     "gulp": "4.0.2",
     "gulp-change": "1.0.2",
@@ -90,9 +90,9 @@
     "husky": "4.2.3",
     "jest": "^26.6.3",
     "jsdoc-to-markdown": "5.0.3",
-    "jsdom": "16.4.0",
+    "jsdom": "^19.0.0",
     "lerna": "^4.0.0",
-    "lint-staged": "10.0.8",
+    "lint-staged": "^12.3.7",
     "lunr": "^2.3.9",
     "map-stream": "0.0.7",
     "postcss": "^8.4.12",
