--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "./packages/core",
     "./packages/create-ima-app",
     "./packages/dev-utils",
-    "./packages/devtool-scripts",
+    "./packages/devtools-scripts",
     "./packages/error-overlay",
     "./packages/helpers",
     "./packages/hmr-client",
@@ -23,11 +23,11 @@
   "scripts": {
     "benchmark": "utils/benchmark/benchmark.sh",
     "build": "turbo run build",
-    "precommit": "lint-staged",
     "commit": "git-cz",
     "doc": "gulp doc",
     "postinstall": "npm run build",
     "lint": "turbo run lint",
+    "prepare": "husky install",
     "release": "lerna version --force-publish create-ima-app",
     "release:devtools": "npm run publish-webstore --prefix ./packages/devtools",
     "release:graduate": "npm run release -- --conventional-graduate",
@@ -38,23 +38,19 @@
     "test": "turbo run test",
     "version": "npm run doc && node utils/version/create-ima-app-versions.js && git add docs packages/create-ima-app/template/package.json"
   },
-  "husky": {
-    "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }
-  },
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
     ]
   },
-  "lint-staged": {
-    "**/*.{js,jsx}": "npm run lint:cmd"
-  },
   "config": {
     "commitizen": {
       "path": "git-cz"
     }
+  },
+  "lint-staged": {
+    "**/*.{js,jsx,ts,tsx}": "npm run lint",
+    "**/*.{css,less}": "npm run stylelint"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.17.0",
@@ -63,7 +59,9 @@
     "@commitlint/config-conventional": "^16.2.1",
     "@fortawesome/fontawesome-free": "5.12.1",
     "@rollup/plugin-commonjs": "^21.0.2",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@rollup/plugin-replace": "^4.0.0",
     "@rollup/plugin-typescript": "^8.3.1",
     "@types/node": "^17.0.21",
     "@types/webpack": "^5.28.0",
@@ -87,7 +85,7 @@
     "gulp": "4.0.2",
     "gulp-change": "1.0.2",
     "gulp-rename": "2.0.0",
-    "husky": "4.2.3",
+    "husky": "^7.0.0",
     "jest": "^26.6.3",
     "jsdoc-to-markdown": "5.0.3",
     "jsdom": "^19.0.0",
@@ -99,6 +97,7 @@
     "postcss-less": "6.0.0",
     "prettier": "^2.6.0",
     "rollup": "^2.70.1",
+    "rollup-plugin-jscc": "^2.0.0",
     "stylelint": "^14.6.0",
     "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-standard": "^25.0.0",
