--- a/packages/devtools-scripts/package.json
+++ b/packages/devtools-scripts/package.json
@@ -25,7 +25,9 @@
       "email": "jan.simecek@firma.seznam.cz"
     }
   ],
-  "main": "./dist/main.string.js",
+  "main": "./dist/main.cjs",
+  "module": "./dist/main.string.mjs",
+  "browser": "./dist/main.string.js",
   "scripts": {
     "build": "npm run build:script && npm run build:string",
     "build:script": "rollup --config",
