fix: broken test infrastructure for new create-ima-app apps

--- a/packages/create-ima-app/template/package.json
+++ b/packages/create-ima-app/template/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "main": "server/server.js",
   "scripts": {
-    "test": "jest --config jest.conf.json",
+    "test": "jest",
     "lint": "eslint --fix './**/*.{js,jsx}'",
     "dev": "./node_modules/.bin/ima dev",
     "build": "NODE_ENV=production ./node_modules/.bin/ima build",
@@ -20,14 +20,15 @@
     "@babel/preset-react": "^7.16.7",
     "@ima/cli": "^17.10.0",
     "@swc/jest": "^0.2.20",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.6",
     "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.6",
     "enzyme-to-json": "^3.6.2",
     "eslint": "^8.10.0",
     "eslint-config-prettier": "^8.4.0",
     "eslint-plugin-jest": "^26.1.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1"
   },
