--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -29,63 +29,65 @@
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'"
   },
   "dependencies": {
-    "@babel/core": "^7.17.7",
-    "@babel/preset-env": "^7.16.11",
-    "@babel/preset-react": "^7.16.7",
-    "@gatsbyjs/webpack-hot-middleware": "^2.25.2",
+    "@babel/core": "7.17.7",
+    "@babel/preset-env": "7.16.11",
+    "@babel/preset-react": "7.16.7",
+    "@gatsbyjs/webpack-hot-middleware": "2.25.2",
     "@ima/dev-utils": "^17.12.3",
     "@ima/error-overlay": "^17.12.3",
     "@ima/hmr-client": "^17.12.3",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.4",
-    "@swc/core": "^1.2.157",
-    "@types/yargs": "^17.0.9",
-    "babel-loader": "^8.2.3",
-    "better-opn": "^3.0.2",
-    "bundle-stats-webpack-plugin": "^3.3.0",
-    "chalk": "^4.1.2",
-    "cli-progress": "^3.10.0",
-    "compression-webpack-plugin": "^9.2.0",
-    "copy-webpack-plugin": "^10.2.4",
-    "core-js": "^3.21.1",
-    "css-loader": "^6.7.1",
-    "css-minimizer-webpack-plugin": "^3.4.1",
-    "express": "^4.17.3",
-    "express-static-gzip": "^2.1.5",
-    "globby": "^11.1.0",
-    "less": "^4.1.2",
-    "less-loader": "^10.2.0",
-    "messageformat": "^2.3.0",
-    "mini-css-extract-plugin": "^2.6.0",
-    "mini-svg-data-uri": "^1.4.4",
-    "nodemon": "^2.0.15",
-    "open-editor": "^3.0.0",
-    "postcss": "^8.4.12",
-    "postcss-flexbugs-fixes": "^5.0.2",
-    "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.4.2",
-    "pretty-bytes": "^5.6.0",
-    "pretty-ms": "^7.0.1",
-    "react-refresh": "^0.11.0",
-    "regenerator-runtime": "^0.13.9",
-    "schema-utils": "^4.0.0",
-    "svgo-loader": "^3.0.0",
-    "swc-loader": "^0.1.15",
-    "webpack": "^5.70.0",
-    "webpack-bundle-analyzer": "^4.5.0",
-    "webpack-dev-middleware": "^5.3.1",
-    "yargs": "^17.3.1"
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.5",
+    "@swc/core": "1.2.163",
+    "babel-loader": "8.2.4",
+    "better-opn": "3.0.2",
+    "bundle-stats-webpack-plugin": "3.3.5",
+    "chalk": "4.1.2",
+    "cli-progress": "3.10.0",
+    "compression-webpack-plugin": "9.2.0",
+    "copy-webpack-plugin": "10.2.4",
+    "core-js": "3.21.1",
+    "css-loader": "6.7.1",
+    "css-minimizer-webpack-plugin": "3.4.1",
+    "globby": "11.1.0",
+    "less": "4.1.2",
+    "less-loader": "10.2.0",
+    "messageformat": "2.3.0",
+    "mini-css-extract-plugin": "2.6.0",
+    "mini-svg-data-uri": "1.4.4",
+    "nodemon": "2.0.15",
+    "open-editor": "3.0.0",
+    "postcss": "8.4.12",
+    "postcss-flexbugs-fixes": "5.0.2",
+    "postcss-loader": "6.2.1",
+    "postcss-preset-env": "7.4.3",
+    "pretty-bytes": "5.6.0",
+    "pretty-ms": "7.0.1",
+    "react-refresh": "0.12.0",
+    "regenerator-runtime": "0.13.9",
+    "schema-utils": "4.0.0",
+    "svgo-loader": "3.0.0",
+    "swc-loader": "0.1.15",
+    "webpack": "5.71.0",
+    "webpack-bundle-analyzer": "4.5.0",
+    "webpack-dev-middleware": "5.3.1",
+    "yargs": "17.4.0"
   },
   "devDependencies": {
-    "@types/cli-progress": "^3.9.2",
-    "@types/express": "^4.17.13",
-    "@types/node": "^17.0.21",
-    "@types/nodemon": "^1.19.1",
-    "@types/webpack-bundle-analyzer": "^4.4.1",
-    "@types/webpack-env": "^1.16.3",
-    "@types/webpack-hot-middleware": "^2.25.6"
+    "@types/yargs": "17.0.9",
+    "@types/cli-progress": "3.9.2",
+    "@types/express": "4.17.13",
+    "@types/node": "17.0.23",
+    "@types/nodemon": "1.19.1",
+    "@types/webpack-bundle-analyzer": "4.4.1",
+    "@types/webpack-env": "1.16.3",
+    "@types/webpack-hot-middleware": "2.25.6",
+    "express": "^4.17.3",
+    "express-static-gzip": "^2.1.5"
   },
   "peerDependencies": {
-    "@ima/server": ">=17.0.0"
+    "@ima/server": ">=17.0.0",
+    "express": "^4.17.3",
+    "express-static-gzip": "^2.1.5"
   },
   "publishConfig": {
     "access": "public",
