chore: 🤖 United error-overlay and devtools webpack setup

--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -40,14 +40,20 @@
     "version:minor": "npm --no-git-tag-version version minor",
     "version:patch": "npm --no-git-tag-version version patch"
   },
-  "dependencies": {
+  "devDependencies": {
     "@ima/devtools-scripts": "^17.12.2",
     "@reach/menu-button": "0.16.2",
     "@reach/tooltip": "0.16.2",
     "@reduxjs/toolkit": "1.8.1",
     "@uiw/react-textarea-code-editor": "^2.0.1",
+    "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
+    "chrome-webstore-upload-cli": "1.2.1",
     "clsx": "^1.1.1",
-    "easy-uid": "2.0.2",
+    "easy-uid": "^2.0.2",
+    "enzyme": "3.11.0",
+    "enzyme-to-json": "3.6.2",
+    "generate-file-webpack-plugin": "^1.0.1",
+    "identity-obj-proxy": "3.0.0",
     "lodash.debounce": "4.0.8",
     "nanoreset": "5.0.0",
     "prop-types": "15.8.1",
@@ -57,30 +63,6 @@
     "react-redux": "7.2.8",
     "react-tabs": "4.2.0",
     "redux": "4.1.2"
-  },
-  "devDependencies": {
-    "@babel/core": "7.17.8",
-    "@babel/plugin-external-helpers": "7.16.7",
-    "@babel/preset-env": "7.16.11",
-    "@babel/preset-react": "7.16.7",
-    "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
-    "autoprefixer": "10.4.4",
-    "babel-loader": "8.2.4",
-    "chrome-webstore-upload-cli": "1.2.1",
-    "copy-webpack-plugin": "10.2.4",
-    "css-loader": "6.7.1",
-    "cssnano": "5.1.7",
-    "enzyme": "3.11.0",
-    "enzyme-to-json": "3.6.2",
-    "file-loader": "6.2.0",
-    "generate-file-webpack-plugin": "^1.0.1",
-    "identity-obj-proxy": "3.0.0",
-    "less": "4.1.2",
-    "less-loader": "10.2.0",
-    "mini-css-extract-plugin": "2.6.0",
-    "postcss": "^8.4.12",
-    "postcss-loader": "6.2.1",
-    "terser-webpack-plugin": "5.3.1"
   },
   "publishConfig": {
     "access": "public",
