--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "**/*.{css,less}": "stylelint './**/*.less'"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
     "@babel/preset-react": "^7.16.7",
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
@@ -72,6 +74,10 @@
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
     "commitizen": "^4.2.4",
+    "copy-webpack-plugin": "^10.2.4",
+    "core-js": "^3.21.1",
+    "css-loader": "^6.7.1",
+    "css-minimizer-webpack-plugin": "^3.4.1",
     "del": "^6.0.0",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.5.0",
@@ -89,14 +95,20 @@
     "jsdoc-to-markdown": "5.0.3",
     "jsdom": "^19.0.0",
     "lerna": "^4.0.0",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
     "lint-staged": "^12.3.7",
     "lunr": "^2.3.9",
     "map-stream": "0.0.7",
+    "mini-css-extract-plugin": "^2.6.0",
     "postcss": "^8.4.12",
     "postcss-less": "6.0.0",
+    "postcss-loader": "^6.2.1",
+    "postcss-preset-env": "^7.4.3",
     "prettier": "^2.6.0",
     "rollup": "^2.70.1",
     "rollup-plugin-jscc": "^2.0.0",
+    "style-loader": "^3.3.1",
     "stylelint": "^14.6.0",
     "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-standard": "^25.0.0",
@@ -108,7 +120,8 @@
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
     "webpack": "^5.70.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   },
   "engines": {
     "node": ">=16",
