--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "autocannon": "^7.7.1",
+    "babel-jest": "^27.5.1",
     "bulma": "0.8.0",
     "chalk": "^4.1.2",
     "chokidar": "^3.5.3",
