--- a/packages/devtools/package.json
+++ b/packages/devtools/package.json
@@ -32,8 +32,8 @@
     "lint": "eslint './**/*.{js,jsx,ts,tsx}'",
     "publish-webstore": "npm run build && npm run upload",
     "stylelint": "stylelint './**/*.less'",
-    "test": "jest --no-watchman -c jest.config.js",
-    "upload": "webstore upload --source ./dist --auto-publish",
+    "test": "jest",
+    "upload": "chrome-webstore-upload upload --source ./dist --auto-publish",
     "preversion": "npm test",
     "postversion": "VERSION=\"$(npx -c 'echo \"$npm_package_version\"')\" && git add package.json package-lock.json && git commit -m 'chore(release-devtools): publish' && git tag -a -m 'devtools-v$VERSION' devtools-v$VERSION && git push --follow-tags",
     "version:major": "npm --no-git-tag-version version major",
@@ -41,13 +41,13 @@
     "version:patch": "npm --no-git-tag-version version patch"
   },
   "devDependencies": {
-    "@ima/devtools-scripts": "^17.12.2",
+    "@ima/devtools-scripts": "^17.13.0",
     "@reach/menu-button": "0.16.2",
     "@reach/tooltip": "0.16.2",
     "@reduxjs/toolkit": "1.8.1",
     "@uiw/react-textarea-code-editor": "^2.0.1",
     "@wojtekmaj/enzyme-adapter-react-17": "0.6.7",
-    "chrome-webstore-upload-cli": "1.2.1",
+    "chrome-webstore-upload-cli": "^2.0.1",
     "clsx": "^1.1.1",
     "easy-uid": "^2.0.2",
     "enzyme": "3.11.0",
