chore: 🤖 Updated dependencies

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,8 +3,9 @@
   "version": "17.12.2",
   "description": "Default dev server for IMA.js applications.",
   "keywords": [
-    "gulp",
     "IMA.js",
+    "server",
+    "ssr",
     "ima"
   ],
   "bugs": {
