--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "scripts": {
     "benchmark": "utils/benchmark/benchmark.sh",
+    "dev": "node ./utils/scripts/dev.js",
     "build": "turbo run build",
     "commit": "git-cz",
     "doc": "gulp doc",
@@ -121,7 +122,8 @@
     "typescript": "^4.6.2",
     "verdaccio": "^5.8.0",
     "webpack": "^5.72.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "yargs": "^17.5.0"
   },
   "engines": {
     "node": ">=16",
