chore: 🤖 fix lerna publish with automation npm token
https://github.com/lerna/lerna/issues/2788

--- a/lerna.json
+++ b/lerna.json
@@ -5,7 +5,8 @@
     },
     "publish": {
       "conventionalCommits": true,
-      "preid": "rc"
+      "preid": "rc",
+      "verifyAccess": false
     }
   },
   "packages": [
