--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -32,7 +32,7 @@
     "@types/webpack-env": "^1.16.3"
   },
   "peerDependencies": {
-    "@ima/dev-utils": "^17.12.3",
+    "@ima/dev-utils": "^18.0.0-rc.0",
     "webpack": "^5.70.0"
   }
 }
