--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/core",
-  "version": "18.0.0-rc.0",
+  "version": "18.0.0-rc.0-next",
   "description": "IMA.js framework for isomorphic javascript application",
   "keywords": [
     "IMA",
@@ -46,10 +46,9 @@
     "preversion": "npm test"
   },
   "dependencies": {
-    "@ima/helpers": "^18.0.0-rc.0",
+    "@ima/helpers": "18.0.0-rc.0-next",
     "classnames": "^2.3.1",
-    "memoize-one": "^6.0.0",
-    "whatwg-fetch": "^3.6.2"
+    "memoize-one": "^6.0.0"
   },
   "devDependencies": {
     "@size-limit/preset-big-lib": "^7.0.8",
@@ -63,7 +62,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873/"
   },
   "size-limit": [
     {
