--- a/packages/error-overlay/package.json
+++ b/packages/error-overlay/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/error-overlay",
-  "version": "18.0.0-rc.0",
+  "version": "18.0.0-rc.0-next",
   "description": "IMA.js error-overlay used in development mode for error reporting.",
   "keywords": [
     "IMA.js",
@@ -26,7 +26,7 @@
     "stylelint": "stylelint './**/*.less'"
   },
   "devDependencies": {
-    "@ima/dev-utils": "^18.0.0-rc.0",
+    "@ima/dev-utils": "18.0.0-rc.0-next",
     "@types/prismjs": "^1.26.0",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
@@ -40,6 +40,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873/"
   }
 }
