--- a/packages/hmr-client/package.json
+++ b/packages/hmr-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ima/hmr-client",
-  "version": "18.0.0-rc.0-next",
+  "version": "18.0.0-rc.0",
   "description": "IMA.js hmr client used to connect app with error overlay.",
   "keywords": [
     "IMA.js",
@@ -25,14 +25,14 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873/"
+    "registry": "https://registry.npmjs.org/"
   },
   "devDependencies": {
-    "@ima/dev-utils": "18.0.0-rc.0-next",
+    "@ima/dev-utils": "^18.0.0-rc.0",
     "@types/webpack-env": "^1.16.3"
   },
   "peerDependencies": {
-    "@ima/dev-utils": "18.0.0-rc.0-next",
+    "@ima/dev-utils": "^18.0.0-rc.0",
     "webpack": "^5.70.0"
   }
 }
