chore: 🤖 another benchmark test

--- a/packages/core/.npmignore
+++ b/packages/core/.npmignore
@@ -1,6 +1,5 @@
-src/
-**/__tests__/
-rollup.config.js
-jest.config.js
-gulpfile.js
-.babelrc
+*
+!dist/**/*
+!package.json
+!transform/**/*
+!polyfill/**/*
