--- a/packages/devtools-scripts/package.json
+++ b/packages/devtools-scripts/package.json
@@ -25,9 +25,9 @@
       "email": "jan.simecek@firma.seznam.cz"
     }
   ],
-  "main": "./dist/main.cjs",
-  "module": "./dist/main.mjs",
-  "browser": "./dist/main.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.mjs",
+  "browser": "./dist/index.js",
   "scripts": {
     "build": "rollup --config",
     "dev": "rollup --config --watch",
