feat: 🎸 Node 18 native fetch support (#212)
* feat: 🎸 Node 18 native fetch support

* refactor: 💡 Inject whatwg-fetch diretly in build

* refactor: 💡 Reverted changes in package.json due to benchmark t

* refactor: 💡 Removed benchmark test remnants

* chore: 🤖 Upped travis to node 18

* test: 💍 Fixed tests

* test: 💍 Fixed HttpAgent tests

* refactor: 💡 Reverted TravisCI node version

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -48,8 +48,7 @@
   "dependencies": {
     "@ima/helpers": "^18.0.0-rc.0",
     "classnames": "^2.3.1",
-    "memoize-one": "^6.0.0",
-    "node-fetch": "^2.6.7"
+    "memoize-one": "^6.0.0"
   },
   "devDependencies": {
     "@size-limit/preset-big-lib": "^7.0.8",
