--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -46,7 +46,7 @@
     "cli-progress": "^3.11.1",
     "compression-webpack-plugin": "^10.0.0",
     "copy-webpack-plugin": "^11.0.0",
-    "core-js": "^3.22.7",
+    "core-js": "3.22.7",
     "css-loader": "6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "ejs": "^3.1.7",
@@ -72,6 +72,7 @@
     "webpack": "^5.72.1",
     "webpack-bundle-analyzer": "4.5.0",
     "webpack-dev-middleware": "^5.3.3",
+    "whatwg-fetch": "^3.6.2",
     "yargs": "^17.5.1"
   },
   "devDependencies": {
